get poi and attendance for other stadiums and merge through pipeline

--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "from shapely import from_wkt\n",
-    "from shapely.geometry import Point, shape\n",
+    "from shapely.geometry import Point\n",
     "from calendar import SATURDAY\n",
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS,\n",
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,12 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rideshare pickups are anonymized to census area so we can't use building catchements."
+    "Weren't able to derive these from buildings. Adding them in now."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,87 +233,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## United Center, McCormick Place catchements"
+    "## POI Catchements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uc_building = poi_buildings[poi_buildings['name'] == 'UNITED CENTER']\n",
-    "mp_building = poi_buildings[poi_buildings['name'] == 'HYATT REGENCY MCCORMICK PLACE']"
+    "def catchements(gdf: pd.DataFrame, pois, areas=False):\n",
+    "    gdf_proj = gdf.to_crs(LOCAL_CRS)\n",
+    "    poi_proj = (pois\n",
+    "                .to_crs(LOCAL_CRS)\n",
+    "                .merge(pd.DataFrame({'radius':[400,800,1600]}),how='cross')\n",
+    "                .assign(radiusft = lambda x: x['radius'].apply(meter_to_foot),\n",
+    "                        buffer = lambda x: x.apply(lambda y: y['geometry'].buffer(y['radiusft']), axis=1))\n",
+    "                .set_geometry('buffer').set_crs(LOCAL_CRS)\n",
+    "                .drop(columns=['geometry','radiusft'])\n",
+    "                .rename(columns={'buffer':'geometry', 'name':'poi'}))\n",
+    "    catches = gdf_proj.merge(poi_proj, how='cross')\n",
+    "    catches['catchname'] = catches['poi'] + ' ' + catches['radius'].astype(str) + 'm'\n",
+    "    if areas:\n",
+    "        catches['catch'] = catches['geometry_x'].intersection(catches['geometry_y']).area / catches['geometry_x'].area\n",
+    "    else:\n",
+    "        catches['catch'] = catches['geometry_x'].intersects(catches['geometry_y'])\n",
+    "    catches = catches.drop(columns=['geometry_x','geometry_y'])\n",
+    "    gdf_cols = list(gdf.columns.intersection(catches.columns))\n",
+    "    catches = (catches.filter(gdf_cols + ['catchname','catch']))\n",
+    "    catches = (catches.pivot(columns='catchname', index=gdf_cols, values='catch')\n",
+    "                .reset_index())\n",
+    "    return gdf.merge(catches, validate=\"1:1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buffered_intersects(gdf: gpd.GeoDataFrame, geom:gpd.GeoSeries, geom_prefix:str, dists:list[int]):\n",
-    "    \"\"\"\n",
-    "    Computes multiple buffer distances around geom and EQUIVALENTLY computes:\n",
-    "        - whether each row of gdf intersects buffer\n",
-    "        - whether buffer intersects each row of gdf\n",
-    "    Params:\n",
-    "        - gdf: compares each row of gdf to geom\n",
-    "        - geom: the shape to compute buffers around. EXPECTS SINGLE ROW\n",
-    "        - geom_prefix: name for resulting buffer comparison column\n",
-    "        - dists: list of buffer radii in meters\n",
-    "    \"\"\"\n",
-    "    assert len(geom) == 1, \"Expects only one geom to buffer around.\"\n",
-    "    building_proj = geom.geometry.to_crs(LOCAL_CRS)\n",
-    "    buffers = [building_proj.buffer(meter_to_foot(d)) for d in dists]\n",
-    "    df_proj = gdf.geometry.to_crs(LOCAL_CRS)\n",
-    "    codes = {f\"{geom_prefix}_{d}\": df_proj.intersects(b.iloc[0]) * 1.0 for d,b in zip(dists,buffers)}\n",
-    "    return gdf.assign(**codes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Coded as** *\"is this station within the catchement of the POI\"*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Stations are coded as \n",
-    "train_stations = train_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "bike_rides = bike_rides.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "bus_stops = bus_stops.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "train_stations = train_stations.pipe(catchements, poi_buildings)\n",
+    "bike_stations = bike_stations.pipe(catchements, poi_buildings)\n",
+    "bike_rides = bike_rides.pipe(catchements, poi_buildings)\n",
     "\n",
-    "train_stations = train_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
-    "bike_rides = bike_rides.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
-    "bus_stops = bus_stops.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Coded as** *\"is this POI catchement intersecting the tract\"*"
+    "# Adding tmp id column just to satisfy this function implementation\n",
+    "bus_stops = bus_stops.reset_index(names='stop_idx')\n",
+    "bus_stops = bus_stops.pipe(catchements, poi_buildings)\n",
+    "bus_stops = bus_stops.drop(columns='stop_idx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_points = tract_points.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "comm_points = comm_points.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "\n",
-    "tract_points = tract_points.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
-    "comm_points = comm_points.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])"
+    "tract_points = tract_points.pipe(catchements, poi_buildings, True)\n",
+    "comm_points = comm_points.pipe(catchements, poi_buildings, True)"
    ]
   },
   {
@@ -333,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -389,12 +364,12 @@
    "metadata": {},
    "source": [
     "At this point 0.2% of bike rides are not strictly within a tract. \n",
-    "But they happen to be really close, so let's"
+    "But they happen to be really close, so let's snap them to the closest one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
