--- a/pipeline/6.1-merge-spatial.ipynb
+++ b/pipeline/6.1-merge-spatial.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Aggregate station features per line:\n",
-    "feature_cols = ['airport', 'uc_400', 'uc_800', 'uc_1600', 'mp_400', 'mp_800', 'mp_1600']\n",
+    "feature_cols = ['airport'] + list(train_stations.filter(regex=r'\\d+m$').columns)\n",
     "\n",
     "# Recover statistic before exploding\n",
     "lines_per_station = train_stations.set_index('map_id')['line'].str.count(',')+1\n",
@@ -268,7 +268,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_cols = ['uc_400','uc_800','uc_1600','mp_400','mp_800','mp_1600','airport']\n",
     "bus_stops_features = bus_stops.groupby('route')[feature_cols].mean()"
    ]
   },
@@ -291,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "Proportion of routes with ANY POI stops\n",
-      "{'uc_400': 0.03, 'uc_800': 0.05, 'uc_1600': 0.1, 'mp_400': 0.01, 'mp_800': 0.04, 'mp_1600': 0.1, 'airport': 0.07}\n"
+      "{'airport': 0.07, 'GUARANTEED RATE FIELD 1600m': 0.08, 'GUARANTEED RATE FIELD 400m': 0.03, 'GUARANTEED RATE FIELD 800m': 0.04, 'HYATT REGENCY MCCORMICK PLACE 1600m': 0.1, 'HYATT REGENCY MCCORMICK PLACE 400m': 0.01, 'HYATT REGENCY MCCORMICK PLACE 800m': 0.04, 'SOLDIER FIELD 1600m': 0.18, 'SOLDIER FIELD 400m': 0.03, 'SOLDIER FIELD 800m': 0.12, 'UNITED CENTER 1600m': 0.1, 'UNITED CENTER 400m': 0.03, 'UNITED CENTER 800m': 0.05, 'WRIGLEY FIELD 1600m': 0.12, 'WRIGLEY FIELD 400m': 0.01, 'WRIGLEY FIELD 800m': 0.06}\n"
      ]
     }
    ],
@@ -333,48 +332,93 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>uc_400</th>\n",
-       "      <th>uc_800</th>\n",
-       "      <th>uc_1600</th>\n",
-       "      <th>mp_400</th>\n",
-       "      <th>mp_800</th>\n",
-       "      <th>mp_1600</th>\n",
        "      <th>airport</th>\n",
+       "      <th>GUARANTEED RATE FIELD 1600m</th>\n",
+       "      <th>GUARANTEED RATE FIELD 400m</th>\n",
+       "      <th>GUARANTEED RATE FIELD 800m</th>\n",
+       "      <th>HYATT REGENCY MCCORMICK PLACE 1600m</th>\n",
+       "      <th>HYATT REGENCY MCCORMICK PLACE 400m</th>\n",
+       "      <th>HYATT REGENCY MCCORMICK PLACE 800m</th>\n",
+       "      <th>SOLDIER FIELD 1600m</th>\n",
+       "      <th>SOLDIER FIELD 400m</th>\n",
+       "      <th>SOLDIER FIELD 800m</th>\n",
+       "      <th>UNITED CENTER 1600m</th>\n",
+       "      <th>UNITED CENTER 400m</th>\n",
+       "      <th>UNITED CENTER 800m</th>\n",
+       "      <th>WRIGLEY FIELD 1600m</th>\n",
+       "      <th>WRIGLEY FIELD 400m</th>\n",
+       "      <th>WRIGLEY FIELD 800m</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>39.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>65.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.005838</td>\n",
-       "      <td>0.024061</td>\n",
-       "      <td>0.085773</td>\n",
-       "      <td>0.001223</td>\n",
-       "      <td>0.014325</td>\n",
-       "      <td>0.049139</td>\n",
-       "      <td>0.004464</td>\n",
+       "      <td>0.002678</td>\n",
+       "      <td>0.043780</td>\n",
+       "      <td>0.002999</td>\n",
+       "      <td>0.011403</td>\n",
+       "      <td>0.029483</td>\n",
+       "      <td>0.000734</td>\n",
+       "      <td>0.008595</td>\n",
+       "      <td>0.068063</td>\n",
+       "      <td>0.005880</td>\n",
+       "      <td>0.019525</td>\n",
+       "      <td>0.051464</td>\n",
+       "      <td>0.003503</td>\n",
+       "      <td>0.014437</td>\n",
+       "      <td>0.048024</td>\n",
+       "      <td>0.001447</td>\n",
+       "      <td>0.009333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.018715</td>\n",
-       "      <td>0.055232</td>\n",
-       "      <td>0.150498</td>\n",
-       "      <td>0.005439</td>\n",
-       "      <td>0.043182</td>\n",
-       "      <td>0.091428</td>\n",
-       "      <td>0.008463</td>\n",
+       "      <td>0.006883</td>\n",
+       "      <td>0.120862</td>\n",
+       "      <td>0.013013</td>\n",
+       "      <td>0.041513</td>\n",
+       "      <td>0.074510</td>\n",
+       "      <td>0.004235</td>\n",
+       "      <td>0.034018</td>\n",
+       "      <td>0.127768</td>\n",
+       "      <td>0.029103</td>\n",
+       "      <td>0.063107</td>\n",
+       "      <td>0.123457</td>\n",
+       "      <td>0.014706</td>\n",
+       "      <td>0.044186</td>\n",
+       "      <td>0.107180</td>\n",
+       "      <td>0.008199</td>\n",
+       "      <td>0.025111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -392,9 +436,27 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -407,46 +469,104 @@
        "      <th>75%</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.134408</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.093375</td>\n",
-       "      <td>0.006944</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.099010</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.006289</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.029412</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.086614</td>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.725490</td>\n",
+       "      <td>0.078431</td>\n",
+       "      <td>0.254902</td>\n",
+       "      <td>0.468750</td>\n",
        "      <td>0.028571</td>\n",
        "      <td>0.234375</td>\n",
-       "      <td>0.468750</td>\n",
-       "      <td>0.031250</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.086614</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.642857</td>\n",
+       "      <td>0.050000</td>\n",
+       "      <td>0.106918</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          uc_400     uc_800    uc_1600     mp_400     mp_800    mp_1600  \\\n",
-       "count  39.000000  39.000000  39.000000  39.000000  39.000000  39.000000   \n",
-       "mean    0.005838   0.024061   0.085773   0.001223   0.014325   0.049139   \n",
-       "std     0.018715   0.055232   0.150498   0.005439   0.043182   0.091428   \n",
-       "min     0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
-       "25%     0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
-       "50%     0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
-       "75%     0.000000   0.000000   0.134408   0.000000   0.000000   0.093375   \n",
-       "max     0.086614   0.222222   0.666667   0.028571   0.234375   0.468750   \n",
+       "         airport  GUARANTEED RATE FIELD 1600m  GUARANTEED RATE FIELD 400m  \\\n",
+       "count  65.000000                    65.000000                   65.000000   \n",
+       "mean    0.002678                     0.043780                    0.002999   \n",
+       "std     0.006883                     0.120862                    0.013013   \n",
+       "min     0.000000                     0.000000                    0.000000   \n",
+       "25%     0.000000                     0.000000                    0.000000   \n",
+       "50%     0.000000                     0.000000                    0.000000   \n",
+       "75%     0.000000                     0.000000                    0.000000   \n",
+       "max     0.031250                     0.725490                    0.078431   \n",
        "\n",
-       "         airport  \n",
-       "count  39.000000  \n",
-       "mean    0.004464  \n",
-       "std     0.008463  \n",
-       "min     0.000000  \n",
-       "25%     0.000000  \n",
-       "50%     0.000000  \n",
-       "75%     0.006944  \n",
-       "max     0.031250  "
+       "       GUARANTEED RATE FIELD 800m  HYATT REGENCY MCCORMICK PLACE 1600m  \\\n",
+       "count                   65.000000                            65.000000   \n",
+       "mean                     0.011403                             0.029483   \n",
+       "std                      0.041513                             0.074510   \n",
+       "min                      0.000000                             0.000000   \n",
+       "25%                      0.000000                             0.000000   \n",
+       "50%                      0.000000                             0.000000   \n",
+       "75%                      0.000000                             0.000000   \n",
+       "max                      0.254902                             0.468750   \n",
+       "\n",
+       "       HYATT REGENCY MCCORMICK PLACE 400m  HYATT REGENCY MCCORMICK PLACE 800m  \\\n",
+       "count                           65.000000                           65.000000   \n",
+       "mean                             0.000734                            0.008595   \n",
+       "std                              0.004235                            0.034018   \n",
+       "min                              0.000000                            0.000000   \n",
+       "25%                              0.000000                            0.000000   \n",
+       "50%                              0.000000                            0.000000   \n",
+       "75%                              0.000000                            0.000000   \n",
+       "max                              0.028571                            0.234375   \n",
+       "\n",
+       "       SOLDIER FIELD 1600m  SOLDIER FIELD 400m  SOLDIER FIELD 800m  \\\n",
+       "count            65.000000           65.000000           65.000000   \n",
+       "mean              0.068063            0.005880            0.019525   \n",
+       "std               0.127768            0.029103            0.063107   \n",
+       "min               0.000000            0.000000            0.000000   \n",
+       "25%               0.000000            0.000000            0.000000   \n",
+       "50%               0.000000            0.000000            0.000000   \n",
+       "75%               0.099010            0.000000            0.006289   \n",
+       "max               0.600000            0.200000            0.400000   \n",
+       "\n",
+       "       UNITED CENTER 1600m  UNITED CENTER 400m  UNITED CENTER 800m  \\\n",
+       "count            65.000000           65.000000           65.000000   \n",
+       "mean              0.051464            0.003503            0.014437   \n",
+       "std               0.123457            0.014706            0.044186   \n",
+       "min               0.000000            0.000000            0.000000   \n",
+       "25%               0.000000            0.000000            0.000000   \n",
+       "50%               0.000000            0.000000            0.000000   \n",
+       "75%               0.000000            0.000000            0.000000   \n",
+       "max               0.666667            0.086614            0.222222   \n",
+       "\n",
+       "       WRIGLEY FIELD 1600m  WRIGLEY FIELD 400m  WRIGLEY FIELD 800m  \n",
+       "count            65.000000           65.000000           65.000000  \n",
+       "mean              0.048024            0.001447            0.009333  \n",
+       "std               0.107180            0.008199            0.025111  \n",
+       "min               0.000000            0.000000            0.000000  \n",
+       "25%               0.000000            0.000000            0.000000  \n",
+       "50%               0.000000            0.000000            0.000000  \n",
+       "75%               0.029412            0.000000            0.000000  \n",
+       "max               0.642857            0.050000            0.106918  "
       ]
      },
      "execution_count": 14,
