--- a/pipeline/7-establish-panel.ipynb
+++ b/pipeline/7-establish-panel.ipynb
@@ -40,11 +40,12 @@
     "tract_panel_in = \"../data/interim/tract_panel.parquet\"\n",
     "comm_panel_in = \"../data/interim/comm_panel.parquet\"\n",
     "tracts_in = \"../data/interim/tracts.geoparquet\"\n",
+    "attend_in = \"../data/interim/sports.csv\"\n",
     "\n",
     "point_panel_out = \"../data/final/point_panel.parquet\"\n",
     "line_panel_out = \"../data/final/line_panel.parquet\"\n",
     "tract_panel_out = \"../data/final/tract_panel.parquet\"\n",
-    "comm_panel_out = \"../data/final/comm_panel.parquet\""
+    "comm_panel_out = \"../data/final/comm_panel.parquet\"\n"
    ]
   },
   {
@@ -64,7 +65,8 @@
     "line_panel = gpd.read_parquet(line_panel_in)\n",
     "tract_panel = gpd.read_parquet(tract_panel_in)\n",
     "comm_panel = gpd.read_parquet(comm_panel_in)\n",
-    "tracts = gpd.read_parquet(tracts_in)['geoid10']"
+    "tracts = gpd.read_parquet(tracts_in)['geoid10']\n",
+    "attend = pd.read_csv(attend_in)"
    ]
   },
   {
@@ -102,8 +104,9 @@
     "# of treated units.\n",
     "\n",
     "def label_ucmp(df):\n",
-    "    df['UCMP'] = np.where((df['uc_1600'] > 0) | (df['mp_1600'] > 0), 1,0)\n",
-    "    return df.drop(columns=df.filter(regex='uc_|mp_').columns)\n",
+    "    is_ucmp = (df.filter(regex=r'(UNITED|MCCORMICK).*1600m$') > 0).any(axis=1)\n",
+    "    df['UCMP'] = np.where(is_ucmp, 1, 0)\n",
+    "    return df\n",
     "\n",
     "point_panel = point_panel.pipe(label_ucmp)\n",
     "line_panel = line_panel.pipe(label_ucmp)\n",
@@ -114,6 +117,51 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_attendance(df, attend):\n",
+    "    attend = attend.groupby(['date','stadium'],as_index=False)['attendance'].sum()\n",
+    "    attend = attend.loc[attend.stadium != 'seatgeek'] # no transit data outside chicago\n",
+    "    stadiums = {\n",
+    "        'soldier': 'SOLDIER FIELD 1600m',\n",
+    "        'guaranteed rate': 'GUARANTEED RATE FIELD 1600m',\n",
+    "        'wrigley': 'WRIGLEY FIELD 1600m',\n",
+    "        'united center': 'UNITED CENTER 1600m',\n",
+    "    }\n",
+    "    attend['stadium'] = attend['stadium'].map(stadiums)\n",
+    "    \n",
+    "    short_cols = df.filter(regex=r'00m$').columns\n",
+    "    stad_cols = df.filter(regex=r'1600m$').columns\n",
+    "    df = df.drop(columns=list(short_cols.difference(stad_cols))) # only need 1600m\n",
+    "    df = df.melt(id_vars=list(df.columns.difference(stad_cols)),\n",
+    "                 value_vars=stad_cols,\n",
+    "                 var_name='stadium',\n",
+    "                 value_name='near_stadium')\n",
+    "    # XXX: Eventually the regression will drop non-attendance rows so might as well do it now.\n",
+    "    #      This is necessary for the merge on date/stadium to work. \n",
+    "    #      Because melt has already added date/stadium combos where nearby==0, and those are going to match on the merge.\n",
+    "    df = df.loc[df['near_stadium']>0].drop(columns=['near_stadium'])\n",
+    "    # XXX: We'll do a left-join here because I'm not ready to drop non-game-days.\n",
+    "    labeled =  pd.merge(df, attend, on=['date','stadium'], how='left')\n",
+    "    return labeled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "point_panel = point_panel.pipe(label_attendance, attend)\n",
+    "line_panel = line_panel.pipe(label_attendance, attend)\n",
+    "tract_panel = tract_panel.pipe(label_attendance, attend)\n",
+    "comm_panel = comm_panel.pipe(label_attendance, attend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,46 +224,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Out of Bounds Bike Stations"
+    "# NaN Check. \n",
+    "assert point_panel.filter(point_panel.columns.difference(['attendance','stadium'])).notna().all(1).all()\n",
+    "assert line_panel.filter(line_panel.columns.difference(['attendance','stadium'])).notna().all(1).all()\n",
+    "assert tract_panel.filter(tract_panel.columns.difference(['attendance','stadium'])).notna().all(1).all()\n",
+    "assert comm_panel.filter(comm_panel.columns.difference(['attendance','stadium'])).notna().all(1).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping 7991 (4%) point rows\n",
-      "Dropping 240 (0%) line rows\n",
-      "Dropping 3521 (1%) tract rows\n",
-      "Dropping 0 (0%) comm rows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# XXX:\n",
-    "# Dropping all nan columns FOR NOW because I don't feel like dealing with it.\n",
-    "# We can probably fix it all by getting all cook county census tracts instead of just chicago.\n",
-    "\n",
-    "print(\"Dropping {} ({:.0%}) point rows\".format(point_panel.isna().any(axis=1).sum(),point_panel.isna().any(axis=1).mean()))\n",
-    "print(\"Dropping {} ({:.0%}) line rows\".format(line_panel.isna().any(axis=1).sum(),line_panel.isna().any(axis=1).mean()))\n",
-    "print(\"Dropping {} ({:.0%}) tract rows\".format(tract_panel.isna().any(axis=1).sum(),tract_panel.isna().any(axis=1).mean()))\n",
-    "print(\"Dropping {} ({:.0%}) comm rows\".format(comm_panel.isna().any(axis=1).sum(),comm_panel.isna().any(axis=1).mean()))\n",
-    "point_panel = point_panel.dropna()\n",
-    "line_panel = line_panel.dropna()\n",
-    "tract_panel = tract_panel.dropna()\n",
-    "comm_panel = comm_panel.dropna()"
+    "# XXX Dropping nulls (they will be dropped by model anyway)\n",
+    "point_panel = point_panel.loc[point_panel['attendance'].notna()]\n",
+    "line_panel = line_panel.loc[line_panel['attendance'].notna()]\n",
+    "tract_panel = tract_panel.loc[tract_panel['attendance'].notna()]\n",
+    "comm_panel = comm_panel.loc[comm_panel['attendance'].notna()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,10 +263,14 @@
     "model_start_yearweek = to_yw(from_ymd(DNC_START) - timedelta(weeks=MODEL_PRE_WEEKS))\n",
     "model_end_yearweek = to_yw(from_ymd(DNC_END) + timedelta(weeks=MODEL_POST_WEEKS))\n",
     "\n",
-    "point_panel = point_panel[point_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
-    "line_panel = line_panel[line_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
-    "tract_panel = tract_panel[tract_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
-    "comm_panel = comm_panel[comm_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]"
+    "# XXX: For attendance model, choosing not to do this because it 1/2's the data\n",
+    "#       and we already have reduced it to just a few locations. The extra data\n",
+    "#       will not hurt our estimates of the DNC effect. It will only make more\n",
+    "#       precise estimates of the non-DNC baseline. But we do need to add month fixed effects now.\n",
+    "# point_panel = point_panel[point_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
+    "# line_panel = line_panel[line_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
+    "# tract_panel = tract_panel[tract_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]\n",
+    "# comm_panel = comm_panel[comm_panel['year-week'].between(model_start_yearweek, model_end_yearweek)]"
    ]
   },
   {
@@ -242,16 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_agg(df):\n",
-    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long',\n",
+    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long','stadium',\n",
     "                                      'train_distance', 'train_contained', \n",
     "                                       'bike_distance', 'bike_contained',\n",
     "                                        'uber_distance', 'uber_contained']}\n",
-    "    time_aggs = {'rides':'sum','DNC':'max', 'is_weekend': 'max', 'dotw': 'max'}  \n",
+    "    time_aggs = {'rides':'sum','attendance':'sum','DNC':'max', \n",
+    "                 'is_weekend': 'max', 'dotw': 'max', 'monthofyear':'max'}  \n",
     "    aggs = {k:v for k,v in (unit_aggs | time_aggs).items() if k in df.columns}\n",
     "    # weekend is constant for weekly model but we just won't include it in the model spec\n",
     "    df_weekly = df.groupby(['year-week','id','transit'], as_index=False).agg(aggs)\n",
@@ -292,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "better model = daily, R2 = 0.771, partial R2 = 0.072\n"
+      "better model = daily, R2 = 0.790, partial R2 = 0.195\n"
      ]
     }
    ],
@@ -329,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -361,27 +402,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3.440143</td>\n",
-       "      <td>4.201957</td>\n",
-       "      <td>1.221448</td>\n",
+       "      <td>4.368489</td>\n",
+       "      <td>5.260695</td>\n",
+       "      <td>1.204237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.025104</td>\n",
-       "      <td>1.324865</td>\n",
-       "      <td>1.292419</td>\n",
+       "      <td>0.821838</td>\n",
+       "      <td>1.001624</td>\n",
+       "      <td>1.21876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mde</th>\n",
-       "      <td>0.009887</td>\n",
-       "      <td>0.028959</td>\n",
-       "      <td>2.928939</td>\n",
+       "      <td>0.033292</td>\n",
+       "      <td>0.069655</td>\n",
+       "      <td>2.092229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>effect_size</th>\n",
-       "      <td>1.747618</td>\n",
-       "      <td>3.232726</td>\n",
-       "      <td>1.84979</td>\n",
+       "      <td>4.438283</td>\n",
+       "      <td>5.511238</td>\n",
+       "      <td>1.24175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>power_achieved</th>\n",
@@ -391,9 +432,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>495.19644</td>\n",
-       "      <td>312.744557</td>\n",
-       "      <td>0.631557</td>\n",
+       "      <td>373.489855</td>\n",
+       "      <td>221.668383</td>\n",
+       "      <td>0.593506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -406,17 +447,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                    daily      weekly     ratio\n",
-       "mean             3.440143    4.201957  1.221448\n",
-       "std              1.025104    1.324865  1.292419\n",
-       "mde              0.009887    0.028959  2.928939\n",
-       "effect_size      1.747618    3.232726   1.84979\n",
-       "power_achieved        1.0         1.0       1.0\n",
-       "t_stat          495.19644  312.744557  0.631557\n",
-       "is_detectable        True        True       1.0"
+       "                     daily      weekly     ratio\n",
+       "mean              4.368489    5.260695  1.204237\n",
+       "std               0.821838    1.001624   1.21876\n",
+       "mde               0.033292    0.069655  2.092229\n",
+       "effect_size       4.438283    5.511238   1.24175\n",
+       "power_achieved         1.0         1.0       1.0\n",
+       "t_stat          373.489855  221.668383  0.593506\n",
+       "is_detectable         True        True       1.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "better model = daily, R2 = 0.771, partial R2 = 0.071\n"
+      "better model = daily, R2 = 0.791, partial R2 = 0.194\n"
      ]
     }
    ],
@@ -464,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -500,18 +541,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.018314</td>\n",
-       "      <td>0.042378</td>\n",
+       "      <td>0.063219</td>\n",
+       "      <td>0.135892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mde</th>\n",
-       "      <td>0.000177</td>\n",
-       "      <td>0.000926</td>\n",
+       "      <td>0.002561</td>\n",
+       "      <td>0.00945</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>effect_size</th>\n",
-       "      <td>1.747618</td>\n",
-       "      <td>3.232726</td>\n",
+       "      <td>4.438283</td>\n",
+       "      <td>5.511238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>power_achieved</th>\n",
@@ -520,8 +561,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>27717.774516</td>\n",
-       "      <td>9777.326135</td>\n",
+       "      <td>4855.341133</td>\n",
+       "      <td>1633.862306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -533,17 +574,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                       daily       weekly\n",
-       "mean                     0.0          0.0\n",
-       "std                 0.018314     0.042378\n",
-       "mde                 0.000177     0.000926\n",
-       "effect_size         1.747618     3.232726\n",
-       "power_achieved           1.0          1.0\n",
-       "t_stat          27717.774516  9777.326135\n",
-       "is_detectable           True         True"
+       "                      daily       weekly\n",
+       "mean                    0.0          0.0\n",
+       "std                0.063219     0.135892\n",
+       "mde                0.002561      0.00945\n",
+       "effect_size        4.438283     5.511238\n",
+       "power_achieved          1.0          1.0\n",
+       "t_stat          4855.341133  1633.862306\n",
+       "is_detectable          True         True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
